Dockerized the service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=vehicle-maintenance
+management.endpoints.web.exposure.include=*
 # H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
